# LearnCPP

./: CMakeLists.txt
GoogleTest/: CMakeLists.txt
LearnCPPSerials/: CMakeLists.txt  README.md  cinBeyonMax.cpp
LearnCPPSerials/Chapter01/: CMakeLists.txt  expressionOnly.cpp  keywordException.cpp  uninitializedVariable.cpp  uselessExpressionStatement.cpp
LearnCPPSerials/Chapter02/: CMakeLists.txt  invalidFunctionDefinitionEmbed.cpp  multiDef.cpp  valueReturningFunctionUB.cpp
LearnCPPSerials/Chapter04/: CMakeLists.txt  earlyReturn.cpp  fixedSizeInteger.cpp  floatCompare.cpp  infAndNaN.cpp  inputChar.cpp  outputManipulator.cpp  presentZeroOne.cpp  printBoolean.cpp
LearnCPPSerials/Chapter05/: CMakeLists.txt  bitsetShowBinary.cpp  changeStringView.cpp  constevalFunction.cpp  constexprFunCallNonConstexprFunc.cpp  constexprFunction.cpp  constexprSimple.cpp  constexprStringView.cpp  dangleStringView.cpp  digitSeparator.cpp  formatPrintlnShowBinary.cpp  functionParameterAsConst.cpp  getlineWithMultiline.cpp  initializeStringView.cpp  inlineCalculate.cpp  inlineDemoMain.cpp  inlineMath.cpp  innerFunctionWithinConstFunction.cpp  isConstantEvaluatedDemo.cpp  localVariableOfConstFunction.cpp  modifiedStringView.cpp  outDecOctHaxNumber.cpp  revalidateStringView.cpp  string2StringView.cpp  stringLength.cpp  stringLiterals.cpp  stringSSize.cpp  stringViewDemo.cpp  stringWithWhiteSpace.cpp  stringviewInspectDestroyedObject.cpp  stringviewRangeModification.cpp
LearnCPPSerials/Chapter06/: CMakeLists.txt  commaOperator.cpp  divideByZero.cpp  divisionOperator.cpp  evenlyDivide.cpp  floatingPointCompare.cpp  logicalShortCircuit.cpp  moduloSignCondition.cpp
LearnCPPSerials/Chapter07/: CMakeLists.txt  automaticLocalVariable.cpp  blockscope.cpp  constantGlobalVariable-Main.cpp  constantGlobalVariable.hpp  externalLinkForFunction-A.cpp  externalLinkForFunction-Main.cpp  externalLinkForGlobalVariable-A.cpp  externalLinkForGlobalVariable-Main.cpp  externalLinkageConstantGlobalVariable-A.cpp  externalLinkageConstantGlobalVariable-A.hpp  externalLinkageConstantGlobalVariable-Main.cpp  globalVariable.cpp  globalVariableAcrossFiles-A.cpp  globalVariableAcrossFiles-Main.cpp  globalVariableHiding.cpp  inlineConstantGlobalVariable-Main.cpp  inlineConstantGlobalVariable-Main.hpp  inlineNamespace.cpp  internalLinkForODR-A.cpp  internalLinkForODR-Main.cpp  internalLinkFunction-A.cpp  internalLinkFunction-Main.cpp  internalLinkGlobalVariable-A.cpp  internalLinkGlobalVariable-Main.cpp  largerSmallerInput.cpp  localVariableUnique.cpp  namespaceAliases.cpp  nestedNamespace.cpp  scopeResolutionOperator.cpp  scopeResolutionOperatorBoo.cpp  scopeResolutionOperatorFoo.cpp  staticDynamicInitGlobalVariable.cpp
LearnCPPSerials/Chapter08/: CMakeLists.txt  PRNGs-Main.cpp  PRNGs-Seed-Main.cpp  abort-Main.cpp  exit-Main.cpp  fallthrough-Main.cpp  globalRandomGenerator-Main.cpp  globalRandomGenerator.hpp  gotoStatement-Main.cpp  mt-Main.cpp  mtSeed-Main.cpp  quick_exit-Main.cpp  quiz8-6-1.cpp  randomDevice-Main.cpp  seedSeq-Main.cpp  switch-Main.cpp  uniformDistribution-Main.cpp
LearnCPPSerials/Chapter09/: CMakeLists.txt  assert-Main.cpp  static_assert-Main.cpp
LearnCPPSerials/Chapter10/: CMakeLists.txt  CStyleCast-Main.cpp  autoParameters-Main.cpp  forwardFunctionDeduction-Main.cpp  implicitConversion-Main.cpp  reinterpretiveConversion-Main.cpp  staticCast-Main.cpp  stringDeduction-Main.cpp  typeAliase-Main.cpp  typeDeduction-Main.cpp  typeid-Main.cpp
LearnCPPSerials/Chapter11/: CMakeLists.txt  deletedFunction-Main.cpp  functionTemplate-A.cpp  functionTemplate-A.hpp  functionTemplate-H.hpp  functionTemplate-Main.cpp  trivialConvertion-Main.cpp
Leetcode/: CMakeLists.txt  lc_helper.h  leetcode0001.cpp  leetcode0002.cpp  leetcode0003.cpp  leetcode0004.cpp  leetcode0005.cpp
