
add_executable(leetcode0001 leetcode0001.cpp)

add_executable(leetcode0002 leetcode0002.cpp)
target_link_libraries(leetcode0002 gtest::gtest)

add_executable(leetcode0003 leetcode0003.cpp)
target_link_libraries(leetcode0003 gtest::gtest)

add_executable(leetcode0004 leetcode0004.cpp)
target_link_libraries(leetcode0004 gtest::gtest)

add_executable(leetcode0005 leetcode0005.cpp)
target_link_libraries(leetcode0005 gtest::gtest)
