add_executable(outDecOctHaxNumber outDecOctHaxNumber.cpp)
add_executable(digitSeparator digitSeparator.cpp)
add_executable(bitsetShowBinary bitsetShowBinary.cpp)
add_executable(formatPrintlnShowBinary formatPrintlnShowBinary.cpp)
add_executable(compileTimeEvaluation compileTimeEvaluation.cpp)
add_executable(constexprSimple constexprSimple.cpp)
add_executable(functionParameterAsConst functionParameterAsConst.cpp)
add_executable(inlineDemo inlineCalculate.cpp inlineMath.cpp inlineDemoMain.cpp)
add_executable(constexprFunction constexprFunction.cpp)
add_executable(isConstantEvaluatedDemo isConstantEvaluatedDemo.cpp)
add_executable(constevalFunction constevalFunction.cpp)
add_executable(localVariableOfConstFunction localVariableOfConstFunction.cpp)
add_executable(innerFunctionWithinConstFunction innerFunctionWithinConstFunction.cpp)
add_executable(constexprFunCallNonConstexprFunc constexprFunCallNonConstexprFunc.cpp)
add_executable(getlineWithMultiline getlineWithMultiline.cpp)
add_executable(stringLength stringLength.cpp)
add_executable(stringSSize stringSSize.cpp)
add_executable(stringLiterals stringLiterals.cpp)
add_executable(initializeStringView initializeStringView.cpp)
add_executable(string2StringView string2StringView.cpp)
add_executable(changeStringView changeStringView.cpp)
add_executable(dangleStringView dangleStringView.cpp)
add_executable(stringviewInspectDestroyedObject stringviewInspectDestroyedObject.cpp)
add_executable(modifiedStringView modifiedStringView.cpp)
add_executable(revalidateStringView revalidateStringView.cpp)
add_executable(stringviewRangeModification stringviewRangeModification.cpp)

