
add_executable(scopeResolutionOperator 
                scopeResolutionOperator.cpp 
                scopeResolutionOperatorFoo.cpp 
                scopeResolutionOperatorBoo.cpp)

add_executable(nestedNamespace nestedNamespace.cpp)
add_executable(namespaceAliases namespaceAliases.cpp)
add_executable(blockscope blockscope.cpp)
add_executable(localVariableUnique localVariableUnique.cpp)
add_executable(automaticLocalVariable automaticLocalVariable.cpp)
add_executable(largerSmallerInput largerSmallerInput.cpp)
add_executable(globalVariable globalVariable.cpp)


