add_executable(
    switchStatement 
    switch-Main.cpp
)

add_executable(
    fallThrough
    fallThrough-Main.cpp
)

add_executable(
    quiz8-6-1
    quiz8-6-1.cpp
)

add_executable(
    gotoStatement
    gotoStatement-Main.cpp
)

add_executable(
    exit
    exit-Main.cpp
)

add_executable(
    quick_exit
    quick_exit-Main.cpp
)


