add_executable(
    switchStatement 
    switch-Main.cpp
)

add_executable(
    fallThrough
    fallThrough-Main.cpp
)

add_executable(
    quiz8-6-1
    quiz8-6-1.cpp
)

add_executable(
    gotoStatement
    gotoStatement-Main.cpp
)

add_executable(
    exit
    exit-Main.cpp
)

add_executable(
    quick_exit
    quick_exit-Main.cpp
)

add_executable(
    abort
    abort-Main.cpp
)

add_executable(
    PRNGs
    PRNGs-Main.cpp
)

add_executable(
    PRNGs-Seed
    PRNGs-Seed-Main.cpp
)

add_executable(
    mt
    mt-Main.cpp
)

add_executable(
    uniformDistribution
    uniformDistribution-Main.cpp
)

add_executable(
    mtSeed
    mtSeed-Main.cpp
)

add_executable(
    randomDevice
    randomDevice-Main.cpp
)

add_executable(
    seedSequence
    seedSeq-Main.cpp
)

add_executable(
    globalRandomGenerator
    globalRandomGenerator-Main.cpp
)



