add_executable(
    reinterpretiveConversion
    reinterpretiveConversion-Main.cpp
)

add_executable(
    implicitConversion
    implicitConversion-Main.cpp
)

add_executable(
    typeid
    typeid-Main.cpp
)

add_executable(
    CStyleCast
    CStyleCast-Main.cpp
)

add_executable(
    staticCast
    staticCast-Main.cpp
)

