add_executable(
    reinterpretiveConversion
    reinterpretiveConversion-Main.cpp
)

add_executable(
    implicitConversion
    implicitConversion-Main.cpp
)

add_executable(
    typeid
    typeid-Main.cpp
)

add_executable(
    CStyleCast
    CStyleCast-Main.cpp
)

add_executable(
    staticCast
    staticCast-Main.cpp
)

add_executable(
    typeAliase
    typeAliase-Main.cpp
)

add_executable(
    typeDeduction
    typeDeduction-Main.cpp
)

add_executable(
    stringDeduction
    stringDeduction-Main.cpp
)

add_executable(
    forwardFunctionDeduction
    forwardFunctionDeduction-Main.cpp
)

